--- a/c1_aws_cloud_technical_essentials/w2_computing_and_networking/2.2_introduction_to_amazon_elastic_compute_cloud.ipynb
+++ b/c1_aws_cloud_technical_essentials/w2_computing_and_networking/2.2_introduction_to_amazon_elastic_compute_cloud.ipynb
@@ -23,7 +23,7 @@
     "  >\n",
     "</center>\n",
     "\n",
-    "Amazon EC2 is a web service that provides secure, resizable compute capacity in the cloud. It allows you to provision virtual servers called EC2 instances. Although AWS uses the phrase \u201cweb service\u201d to describe it, it doesn\u2019t mean that you are limited to running just web servers on your EC2 instances. You can create and manage these instances through the AWS Management Console, the AWS Command Line Interface (CLI), AWS Software Development Kits (SDKs), or through automation tools and infrastructure orchestration services.In order to create an EC2 instance, you need to define:\n",
+    "Amazon EC2 is a web service that provides secure, resizable compute capacity in the cloud. It allows you to provision virtual servers called EC2 instances. Although AWS uses the phrase “web service” to describe it, it doesn’t mean that you are limited to running just web servers on your EC2 instances. You can create and manage these instances through the AWS Management Console, the AWS Command Line Interface (CLI), AWS Software Development Kits (SDKs), or through automation tools and infrastructure orchestration services. In order to create an EC2 instance, you need to define:\n",
     "- Hardware specifications, like CPU, memory, network, and storage.\n",
     "- Logical configurations, like networking location, firewall rules, authentication, and the operating system of your choice.\n",
     "\n",
@@ -35,7 +35,7 @@
    "metadata": {},
    "source": [
     "## What Is an AMI?\n",
-    "In the traditional infrastructure world, the process of spinning up a server consists of installing an operating system from installation disks, installation drives, or installation wizards over the network. In the AWS Cloud, this operating system installation is no longer your responsibility, and is instead built into the AMI that you choose.Not only does an AMI let you configure which operating system you want, you can also select storage mappings, the architecture type (such as 32-bit, 64-bit, or 64-bit ARM), and additional software installed."
+    "In the traditional infrastructure world, the process of spinning up a server consists of installing an operating system from installation disks, installation drives, or installation wizards over the network. In the AWS Cloud, this operating system installation is no longer your responsibility, and is instead built into the AMI that you choose. Not only does an AMI let you configure which operating system you want, you can also select storage mappings, the architecture type (such as 32-bit, 64-bit, or 64-bit ARM), and additional software installed."
    ]
   },
   {
@@ -45,7 +45,7 @@
     "## What Is the Relationship Between AMIs and EC2 Instances?\n",
     "EC2 instances are live instantiations of what is defined in an AMI, much like a cake is a live instantiation of a cake recipe. If you are familiar with software development, you can also see this kind of relationship between a Class and an Object.\n",
     "\n",
-    "A Class is something you model and define, while an object is something you interact with. In this case, the AMI is how you model and define your instance, while the EC2 instance is the entity you interact with, where you can install your web server, and serve your content to users.When you launch a new instance, AWS allocates a virtual machine that runs on a hypervisor. Then the AMI you selected is copied to the root device volume, which contains the image used to boot the volume. In the end, you get a server you can connect to and install packages and any additional software. In this case, you install a web server along with the properly configured source code of your employee directory app.\n",
+    "A Class is something you model and define, while an object is something you interact with. In this case, the AMI is how you model and define your instance, while the EC2 instance is the entity you interact with, where you can install your web server, and serve your content to users. When you launch a new instance, AWS allocates a virtual machine that runs on a hypervisor. Then the AMI you selected is copied to the root device volume, which contains the image used to boot the volume. In the end, you get a server you can connect to and install packages and any additional software. In this case, you install a web server along with the properly configured source code of your employee directory app.\n",
     "\n",
     "<center>\n",
     "  <img \n",
@@ -90,7 +90,7 @@
     "- Community AMIs that are provided by the AWS user community.\n",
     "- Build your own custom image with EC2 Image Builder.\n",
     "\n",
-    "Each AMI in the AWS Management Console has an AMI ID, which is prefixed by \u201cami-\u201d, followed by a random hash of numbers and letters. These IDs are unique to each AWS region.\n",
+    "Each AMI in the AWS Management Console has an AMI ID, which is prefixed by “ami-”, followed by a random hash of numbers and letters. These IDs are unique to each AWS region.\n",
     "\n",
     "<center>\n",
     "  <img \n",
