--- a/c1_aws_cloud_technical_essentials/w2_computing_and_networking/2.7_amazon_vpc_routing_and_security.ipynb
+++ b/c1_aws_cloud_technical_essentials/w2_computing_and_networking/2.7_amazon_vpc_routing_and_security.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Main Route Table\n",
+    "## The Main Route Table\n",
     "When you create a VPC, AWS creates a route table called the main route table. A route table contains a set of rules, called routes, that are used to determine where network traffic is directed. AWS assumes that when you create a new VPC with subnets, you want traffic to flow between them. Therefore, the default configuration of the main route table is to allow traffic between all subnets in the local network. Below is an example of a main route table:\n",
     "\n",
     "<center>\n",
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Custom Route Tables\n",
+    "## Custom Route Tables\n",
     "While the main route table controls the routing for your VPC, you may want to be more granular about how you route your traffic for specific subnets. For example, your application may consist of a frontend and a database. You can create separate subnets for these resources and provide different routes for each of them.\n",
     "\n",
     "If you associate a custom route table with a subnet, the subnet will use it instead of the main route table. By default, each custom route table you create will have the local route already inside it, allowing communication to flow between all resources and subnets inside the VPC.\n",
@@ -56,8 +56,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Secure Your Subnets with Network ACLs\n",
-    "Think of a network ACL as a firewall at the subnet level. A network ACL enables you to control what kind of traffic is allowed to enter or leave your subnet. You can configure this by setting up rules that define what you want to filter. Here\u2019s an example.\n",
+    "## Secure Your Subnets with Network ACLs\n",
+    "Think of a network ACL as a firewall at the subnet level. A network ACL enables you to control what kind of traffic is allowed to enter or leave your subnet. You can configure this by setting up rules that define what you want to filter. Here’s an example.\n",
     "\n",
     "| Inbound  |                  |          |            |           |            |\n",
     "|----------|------------------|----------|------------|-----------|------------|\n",
@@ -75,23 +75,23 @@
     "|----------|------------------|----------|------------|------------|----------------------------------------------------------------------------------------------------------------------------|\n",
     "| Rule #   | Source IP        | Protocol | Port       | Allow/Deny | Comments                                                                                                                   |\n",
     "| 100      | All IPv4 traffic | TCP      | 443        | ALLOW      | Allows inbound HTTPS traffic from anywhere                                                                                 |\n",
-    "| 130      | 192.0.2.0/24     | TCP      | 3389       | ALLOW      | Allows inbound RDP traffic to the web servers from your home network\u2019s public IP address range (over the internet gateway) |\n",
+    "| 130      | 192.0.2.0/24     | TCP      | 3389       | ALLOW      | Allows inbound RDP traffic to the web servers from your home network’s public IP address range (over the internet gateway) |\n",
     "| *        | All IPv4 traffic | All      | All        | DENY       | Denies all inbound traffic not already handled by a preceding rule (not modifiable)                                        |\n",
     "| Outbound |                  |          |            |            |                                                                                                                            |\n",
     "| Rule #   | Destination IP   | Protocol | Port       | Allow/Deny | Comments                                                                                                                   |\n",
     "| 120      | 0.0.0.0/0        | TCP      | 1025-65535 | ALLOW      | Allows outbound responses to clients on the internet (serving people visiting the web servers in the subnet)               |\n",
     "| *        | 0.0.0.0/0        | All      | All        | DENY       | Denies all outbound traffic not already handled by a preceding rule (not modifiable)                                       |\n",
     "\n",
-    "Notice that in the network ACL example above, you allow inbound 443 and outbound range 1025-65535. That\u2019s because HTTP uses port 443 to initiate a connection and will respond to an ephemeral port. Network ACL\u2019s are considered stateless, so you need to include both the inbound and outbound ports used for the protocol. If you don\u2019t include the outbound range, your server would respond but the traffic would never leave the subnet.\n",
+    "Notice that in the network ACL example above, you allow inbound 443 and outbound range 1025-65535. That’s because HTTP uses port 443 to initiate a connection and will respond to an ephemeral port. Network ACL’s are considered stateless, so you need to include both the inbound and outbound ports used for the protocol. If you don’t include the outbound range, your server would respond but the traffic would never leave the subnet.\n",
     "\n",
-    "Since network ACLs are configured by default to allow incoming and outgoing traffic, you don\u2019t need to change their initial settings unless you need additional security layers."
+    "Since network ACLs are configured by default to allow incoming and outgoing traffic, you don’t need to change their initial settings unless you need additional security layers."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Secure Your EC2 Instances with Security Groups\n",
+    "## Secure Your EC2 Instances with Security Groups\n",
     "The next layer of security is for your EC2 Instances. Here, you can create a firewall called a security group. The default configuration of a security group blocks all inbound traffic and allows all outbound traffic.\n",
     "\n",
     "<center>\n",
@@ -105,9 +105,9 @@
     "  >\n",
     "</center>\n",
     "\n",
-    "You might be wondering: \u201cWouldn\u2019t this block all EC2 instances from receiving the response of any customer requests?\u201d Well, security groups are stateful, meaning they will remember if a connection is originally initiated by the EC2 instance or from the outside and temporarily allow traffic to respond without having to modify the inbound rules.\n",
+    "You might be wondering: “Wouldn’t this block all EC2 instances from receiving the response of any customer requests?” Well, security groups are stateful, meaning they will remember if a connection is originally initiated by the EC2 instance or from the outside and temporarily allow traffic to respond without having to modify the inbound rules.\n",
     "\n",
-    "If you want your EC2 instance to accept traffic from the internet, you\u2019ll need to open up inbound ports. If you have a web server, you may need to accept HTTP and HTTPS requests to allow that type of traffic in through your security group. You can create an inbound rule that will allow port 80 (HTTP) and port 443 (HTTPS) as shown below.\n",
+    "If you want your EC2 instance to accept traffic from the internet, you’ll need to open up inbound ports. If you have a web server, you may need to accept HTTP and HTTPS requests to allow that type of traffic in through your security group. You can create an inbound rule that will allow port 80 (HTTP) and port 443 (HTTPS) as shown below.\n",
     "\n",
     "| Inbound rules |          |            |           |\n",
     "|---------------|----------|------------|-----------|\n",
