--- a/c1_aws_cloud_technical_essentials/w2_computing_and_networking/2.3_container_services_on_aws.ipynb
+++ b/c1_aws_cloud_technical_essentials/w2_computing_and_networking/2.3_container_services_on_aws.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Reading 2.3: Container Services on AWS\n",
-    "AWS offers a broad spectrum of compute offerings that give you the flexibility to choose the right tool for the right job. The three main categories of compute are\u00a0*virtual machines*,\u00a0*containers*, and\u00a0*serverless*. There is no one-size-fits-all service because it depends on your needs.The key is to understand what each option has to offer in order to build a more appropriate cloud architecture for your use case. In this unit, you learn about containers and how to run them on AWS.Containers can host a variety of different workloads, including web applications, lift and shift migrations, distributed applications, and streamlining of development, test, and production environments."
+    "AWS offers a broad spectrum of compute offerings that give you the flexibility to choose the right tool for the right job. The three main categories of compute are *virtual machines*, *containers*, and *serverless*. There is no one-size-fits-all service because it depends on your needs. The key is to understand what each option has to offer in order to build a more appropriate cloud architecture for your use case. In this unit, you learn about containers and how to run them on AWS. Containers can host a variety of different workloads, including web applications, lift and shift migrations, distributed applications, and streamlining of development, test, and production environments."
    ]
   },
   {
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "## What Is A Container?\n",
-    "While containers are often referred to as a new technology, the idea started in the 1970s with certain Linux kernels having the ability to separate their processes through isolation. At the time, this was configured manually, making operations complex.With the evolution of the open source software community, containers evolved. Today, containers are used as a solution to problems of traditional compute, including the issue of getting software to run reliably when it moves from one compute environment to another.A container is a standardized unit that packages up your code and all of its dependencies. This package is designed to run reliably on any platform, because the container creates its own independent environment. This makes it easy to carry workloads from one place to another, such as from development to production or from on-premises to the cloud."
+    "While containers are often referred to as a new technology, the idea started in the 1970s with certain Linux kernels having the ability to separate their processes through isolation. At the time, this was configured manually, making operations complex. With the evolution of the open source software community, containers evolved. Today, containers are used as a solution to problems of traditional compute, including the issue of getting software to run reliably when it moves from one compute environment to another. A container is a standardized unit that packages up your code and all of its dependencies. This package is designed to run reliably on any platform, because the container creates its own independent environment. This makes it easy to carry workloads from one place to another, such as from development to production or from on-premises to the cloud."
    ]
   },
   {
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "## What Is Docker?\n",
-    "When you hear the word\u00a0*container*, you may associate it with Docker. Docker is a popular container runtime that simplifies the management of the entire operating system stack needed for container isolation, including networking and storage. Docker makes it easy to create, package, deploy, and run containers."
+    "When you hear the word *container*, you may associate it with Docker. Docker is a popular container runtime that simplifies the management of the entire operating system stack needed for container isolation, including networking and storage. Docker makes it easy to create, package, deploy, and run containers."
    ]
   },
   {
@@ -40,7 +40,7 @@
     "  >\n",
     "</center>\n",
     "\n",
-    "Containers share the same operating system and kernel as the host they exist on, whereas virtual machines contain their operating system. Since each virtual machine has to maintain a copy of an operating system, there\u2019s a degree of wasted space.A container is more lightweight. They spin up quicker, almost instantly. This difference in startup time becomes instrumental when designing applications that need to scale quickly during input/output (I/O) bursts.While containers can provide speed, virtual machines offer you the full strength of an operating system and offer more resources, like package installation, a dedicated kernel, and more."
+    "Containers share the same operating system and kernel as the host they exist on, whereas virtual machines contain their operating system. Since each virtual machine has to maintain a copy of an operating system, there’s a degree of wasted space. A container is more lightweight. They spin up quicker, almost instantly. This difference in startup time becomes instrumental when designing applications that need to scale quickly during input/output (I/O) bursts. While containers can provide speed, virtual machines offer you the full strength of an operating system and offer more resources, like package installation, a dedicated kernel, and more."
    ]
   },
   {
@@ -48,7 +48,7 @@
    "metadata": {},
    "source": [
     "## Orchestrate Containers\n",
-    "In AWS, containers run on EC2 instances. For example, you may have a large instance and run a few containers on that instance.While running one instance is easy to manage, it lacks high availability and scalability. Most companies and organizations run many containers on many EC2 instances across several Availability Zones.If you\u2019re trying to manage your compute at a large scale, you need to know:\n",
+    "In AWS, containers run on EC2 instances. For example, you may have a large instance and run a few containers on that instance. While running one instance is easy to manage, it lacks high availability and scalability. Most companies and organizations run many containers on many EC2 instances across several Availability Zones. If you’re trying to manage your compute at a large scale, you need to know:\n",
     "- How to place your containers on your instances.\n",
     "- What happens if your container fails.\n",
     "- What happens if your instance fails.\n",
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Manage Containers With Amazon Elastic Container Service (amazon Ecs)\n",
+    "## Manage Containers With Amazon Elastic Container Service (Amazon ECS)\n",
     "\n",
     "Amazon ECS is an end-to-end container orchestration service that allows you to quickly spin up new containers and manage them across a cluster of EC2 instances.\n",
     "\n",
@@ -76,7 +76,7 @@
     "  >\n",
     "</center>\n",
     "\n",
-    "To run and manage your containers, you need to install the Amazon ECS Container Agent on your EC2 instances. This agent is open source and responsible for communicating back to the Amazon ECS service about cluster management details. You can run this agent on both Linux and Windows AMIs. An instance with the container agent installed is often called a\u00a0*container instance*.\n",
+    "To run and manage your containers, you need to install the Amazon ECS Container Agent on your EC2 instances. This agent is open source and responsible for communicating back to the Amazon ECS service about cluster management details. You can run this agent on both Linux and Windows AMIs. An instance with the container agent installed is often called a *container instance*.\n",
     "\n",
     "<center>\n",
     "  <img \n",
@@ -118,21 +118,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use Kubernetes With Amazon Elastic Kubernetes Service (amazon Eks)\n",
-    "Kubernetes is a portable, extensible, open source platform for managing containerized workloads and services. By bringing software development and operations together by design, Kubernetes created a rapidly growing ecosystem that is very popular and well established in the market.If you already use Kubernetes, you can use Amazon EKS to orchestrate these workloads in the AWS Cloud.Amazon EKS is conceptually similar to Amazon ECS, but there are some differences.\n",
+    "## Use Kubernetes With Amazon Elastic Kubernetes Service (Amazon EKS)\n",
+    "Kubernetes is a portable, extensible, open source platform for managing containerized workloads and services. By bringing software development and operations together by design, Kubernetes created a rapidly growing ecosystem that is very popular and well established in the market. If you already use Kubernetes, you can use Amazon EKS to orchestrate these workloads in the AWS Cloud. Amazon EKS is conceptually similar to Amazon ECS, but there are some differences.\n",
     "- An EC2 instance with the ECS Agent installed and configured is called a container instance. In Amazon EKS, it is called a worker node.\n",
-    "- An ECS Container is called a task. In the Amazon EKS ecosystem, it is called a pod.\n",
+    "- An ECS container is called a task. In the Amazon EKS ecosystem, it is called a pod.\n",
     "- While Amazon ECS runs on AWS native technology, Amazon EKS runs on top of Kubernetes.\n",
     "\n",
     "If you have containers running on Kubernetes and want an advanced orchestration solution that can provide simplicity, high availability, and fine-grained control over your infrastructure, Amazon EKS is the tool for you.\n",
     "\n",
     "## Resources\n",
-    "- [*External Site:*\u00a0AWS: Containers on AWS](https://aws.amazon.com/containers/services/)\n",
-    "- [*External Site:*\u00a0Docker: What Is a Container?](https://www.docker.com/resources/what-container)\n",
-    "- [*External Site:*\u00a0AWS: Amazon Elastic Container Service](https://aws.amazon.com/ecs/)\n",
-    "- [*External Site:*\u00a0Github: Amazon ECS Agent](https://github.com/aws/amazon-ecs-agent)\n",
-    "- [*External Site:*\u00a0AWS: Amazon ECS container instances](https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ECS_instances.html)\n",
-    "- [*Coursera Course:*\u00a0Building Containerized Applications on AWS](https://www.coursera.org/learn/containerized-apps-on-aws)"
+    "- [*External Site:* AWS: Containers on AWS](https://aws.amazon.com/containers/services/)\n",
+    "- [*External Site:* Docker: What Is a Container?](https://www.docker.com/resources/what-container)\n",
+    "- [*External Site:* AWS: Amazon Elastic Container Service](https://aws.amazon.com/ecs/)\n",
+    "- [*External Site:* Github: Amazon ECS Agent](https://github.com/aws/amazon-ecs-agent)\n",
+    "- [*External Site:* AWS: Amazon ECS container instances](https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ECS_instances.html)\n",
+    "- [*Coursera Course:* Building Containerized Applications on AWS](https://www.coursera.org/learn/containerized-apps-on-aws)"
    ]
   }
  ],
