--- a/c1_aws_cloud_technical_essentials/w2_computing_and_networking/2.5_networking_on_aws.ipynb
+++ b/c1_aws_cloud_technical_essentials/w2_computing_and_networking/2.5_networking_on_aws.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## What Is Networking?\n",
-    "Networking is how you connect computers around the world and allow them to communicate with one another. In this trail, you\u2019ve already seen a few examples of networking. One is the AWS global infrastructure. AWS has created a network of resources using data centers, Availability Zones, and Regions."
+    "Networking is how you connect computers around the world and allow them to communicate with one another. In this trail, you’ve already seen a few examples of networking. One is the AWS global infrastructure. AWS has created a network of resources using data centers, Availability Zones, and Regions."
    ]
   },
   {
@@ -25,7 +25,7 @@
     "- The address of the sender in the From section.\n",
     "- The address of the recipient in the To section.\n",
     "\n",
-    "Let\u2019s go further. Each address must contain information such as:\n",
+    "Let’s go further. Each address must contain information such as:\n",
     "- Name of sender and recipient\n",
     "- Street\n",
     "- City\n",
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What Are Ip Addresses?\n",
+    "## What Are IP Addresses?\n",
     "In order to properly route your messages to a location, you need an address. Just like each home has a mail address, each computer has an IP address. However, instead of using the combination of street, city, state, zip code, and country, the IP address uses a combination of bits, 0s and 1s.\n",
     "\n",
     "Here is an example of a 32-bit address in binary format:\n",
@@ -56,7 +56,7 @@
     "  >\n",
     "</center>\n",
     "\n",
-    "It\u2019s called 32-bit because you have 32 digits. Feel free to count!"
+    "It’s called 32-bit because you have 32 digits. Feel free to count!"
    ]
   },
   {
@@ -64,9 +64,9 @@
    "metadata": {},
    "source": [
     "## What Is IPv4 Notation?\n",
-    "Typically, you don\u2019t see an IP address in this binary format. Instead, it\u2019s converted into decimal format and noted as an Ipv4 address.\n",
+    "Typically, you don’t see an IP address in this binary format. Instead, it’s converted into decimal format and noted as an Ipv4 address.\n",
     "\n",
-    "In the diagram below, the 32 bits are grouped into groups of 8 bits, also called octets. Each of these groups is converted into decimal format separated by a period.\u00a0\n",
+    "In the diagram below, the 32 bits are grouped into groups of 8 bits, also called octets. Each of these groups is converted into decimal format separated by a period. \n",
     "\n",
     "<center>\n",
     "  <img \n",
@@ -79,19 +79,19 @@
     "  >\n",
     "</center>\n",
     "\n",
-    "In the end, this is what is called an Ipv4 address. This is important to know when trying to communicate to a single computer. But remember, you\u2019re working with a network. This is where CIDR Notation comes in."
+    "In the end, this is what is called an Ipv4 address. This is important to know when trying to communicate to a single computer. But remember, you’re working with a network. This is where CIDR Notation comes in."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use Cidr Notation\n",
+    "## Use CIDR Notation\n",
     "192.168.1.30 is a single IP address. If you wanted to express IP addresses between the range of 192.168.1.0 and 192.168.1.255, how can you do that?\n",
     "\n",
     "One way is by using Classless Inter-Domain Routing (CIDR) notation. CIDR notation is a compressed way of specifying a range of IP addresses. Specifying a range determines how many IP addresses are available to you.\n",
     "\n",
-    "CIDR notation looks like this:\u00a0\n",
+    "CIDR notation looks like this: \n",
     "\n",
     "<center>\n",
     "  <img \n",
@@ -104,7 +104,7 @@
     "  >\n",
     "</center>\n",
     "\n",
-    "It begins with a starting IP address and is separated by a forward slash (the \u201c/\u201d character) followed by a number. The number at the end specifies how many of the bits of the IP address are fixed. In this example, the first 24 bits of the IP address are fixed. The rest are flexible.\u00a0\n",
+    "It begins with a starting IP address and is separated by a forward slash (the “/” character) followed by a number. The number at the end specifies how many of the bits of the IP address are fixed. In this example, the first 24 bits of the IP address are fixed. The rest are flexible. \n",
     "\n",
     "<center>\n",
     "  <img \n",
