--- a/c1_aws_cloud_technical_essentials/w2_computing_and_networking/2.6_introduction_to_amazon_vpc.ipynb
+++ b/c1_aws_cloud_technical_essentials/w2_computing_and_networking/2.6_introduction_to_amazon_vpc.ipynb
@@ -130,7 +130,7 @@
     "## Resources\n",
     "- [AWS: VPC with public and private subnets (NAT)](https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Scenario2.html)\n",
     "- [AWS: custom route tables](https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Route_Tables.html#CustomRouteTables)\n",
-    "- [Customer Gateway](https://docs.aws.amazon.com/vpn/latest/s2svpn/how_it_works.html#CustomerGateway)\n",
+    "- [AWS: Customer Gateway](https://docs.aws.amazon.com/vpn/latest/s2svpn/how_it_works.html#CustomerGateway)\n",
     "- [AWS: What Is Amazon VPC?](https://docs.aws.amazon.com/vpc/latest/userguide/what-is-amazon-vpc.html)\n",
     "- [AWS: VPCs and subnets](https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Subnets.html)"
    ]
